# clas-digital

./: .gitignore  CMakeLists.txt  Makefile  README.md  \  check.py  conanfile.txt  doc.cfg  inBSB_noOcr.txt  install  install.sh  install_deps.sh  keygen.sh  makefile  ok.txt  questionaire.md  search.config  test_difference.py
.cache/clangd/index/: EventManager.cpp.630ACBCBEF15ADDF.idx  EventManager.hpp.FF2F37A66BB4D00F.idx  IReferenceManager.h.C97F184035323A7E.idx  PlugInManager.cpp.9E04F0717554E326.idx  PlugInManager.hpp.6531BCA55B056F49.idx  URLParser.cpp.E46EEDC04725B5F2.idx  URLParser.hpp.6F6CF4928F6A089D.idx  book.cc.9FC982B5A4314A2A.idx  book.h.6DDFA69F3B25A939.idx  book_manager.cc.6C419BE411E851A8.idx  book_manager.h.386A27F30C3F7128.idx  cache.h.F854B818C6C51FA6.idx  cache_tests.cpp.55097D43489CA662.idx  corpus_manager.cc.A3E87E663794BDAB.idx  corpus_manager.h.EF24680931E282CB.idx  debug.hpp.127A5788B73EA9FB.idx  event_manager_test.cpp.D82541B47AF9E779.idx  filehandler.cpp.4019F09A9BE9D2B4.idx  filehandler.hpp.3BE4DEC62824D809.idx  func.cpp.A09EE793C588C030.idx  func.hpp.6688D0E931E2A13D.idx  fuzzy.cpp.A62E7121B1850C5E.idx  fuzzy.hpp.D201011B78E7E4F0.idx  gramma.h.A637C8D32E693409.idx  main.cc.C082AA5860C05078.idx  main.cpp.1BAECBF353841FF2.idx  main.cpp.8EB6AD526BD09428.idx  metadata_handler.cc.0545B8E70D881EE8.idx  metadata_handler.h.54D07FD1A7329FD1.idx  plug_in_manager_test.cpp.A30A12F604E4DF8D.idx  result_object.cc.8ABB4945E3506C6D.idx  result_object.h.91C88332BB53FDD0.idx  search.cc.32C269550CF598C0.idx  search.h.D6144C445171CA50.idx  search_object.cc.E7A2025EE89321B9.idx  search_object.h.53CAD30A9778CD01.idx  search_options.cc.D5B9FFCC61AAB342.idx  search_options.cc.FFC3BFD006F74430.idx  search_options.h.1C657348F6C44CE4.idx  search_options.h.AAAD6A3139336987.idx  (+25 more)
.github/workflows/: build.yml  cmake.yml
git_policy/: pre-commit
helper/: init.vim
helper_scripts/: migrate.cpp
keygen/: keygen.sh
plugins/clas-digital/: main.cpp  server.cc  server.hpp
src/: :W  clas-digital-devel.service  clas-digital.service  default  main.cpp  main.py  test.cpp
src/PdfExtractor/: main.cpp  pdf_extractor.cc
src/books/: .Book.cpp.swo  :w  Book.cpp  Bookmanager.cpp  CBook.h  CBook.hpp  CBookManager.hpp  CFunctions.h  CFunctions.hpp  CMetadata.hpp  CSearch.hpp  CSearchOptions.hpp  Functions.cpp  Metadata.cpp  Search.cpp  SearchOptions.cpp  a.out  book.py  func.cpp  func.hpp  func.py  fuzzy.cpp  fuzzy.hpp  json.hpp  main.cpp  main.py  main2.cpp  manager.py  metadata.py  metadata_handler.h  page10.txt  page1000.txt  page1001.txt  page1002.txt  page1003.txt  page1004.txt  page1005.txt  page1006.txt  page1007.txt  page1008.txt  (+1246 more)
src/console/: console.cpp  console.hpp  unittestconsole.cpp
src/login/: user.cpp  user_system.hpp  usertable.cpp
src/login/tests/: TestUser.cpp  TestUsertable.cpp
src/nginx_config/: default
src/ocr/: tesseract.cpp  tesseract.hpp
src/search/: README.md  main.cpp
src/search/book_manager/: Book.cpp  Bookmanager.cpp  CBook.hpp  CBookManager.hpp  book.cc  book.h  book_manager.cc  book_manager.h  database.cc  database.h  word_info.cc  word_info.h
src/search/data_models/: a.out  match_object.h  result_object.cc  result_object.h  search_object.cc  search_object.h  search_options.cc  search_options.h  search_tree.h  searched_word_object.h  sorted_matches.cc  sorted_matches.h  tmp_word_info.cc  tmp_word_info.h  word_info.h
src/search/scripts/: main.py
src/search/search/: CSearch.hpp  CSearchOptions.hpp  SearchOptions.cpp  search.cc  search.h  search_options.cc  search_options.h
src/search/statistics/: statistics.h
src/search/tests/: base_data.h  test_func.cc  test_fuzzy_search.cc  test_ocr_fuzzy_search.cc  test_ocr_search.cc  test_search.cc  test_search_speed.cc  test_wiki_search.cc  util.cc  util.h
src/server/: BasicHandlers.hpp  GetHandler.cpp  GetHandler.hpp  HandlerFactory.cpp  HandlerFactory.hpp  PostHandler.cpp  URIObjects.cpp  URIObjects.hpp  clas-digital.service  httpparser.cpp  httpparser.hpp  main.cpp  server.cpp  server.hpp
src/server/PdfExtractor/: a.out  pdf_extractor.h
src/server/cache/: cache.h
src/server/corpus_manager/: corpus_manager.cc  corpus_manager.h
src/server/debug/: debug.hpp
src/server/filehandler/: filehandler.cpp  filehandler.hpp  util.h
src/server/html_creator/: StaticWebpageCreator.hpp
src/server/login/: user.cpp  user.hpp  user_system.hpp  usertable.cpp
src/server/ocr/: tesseract.hpp
src/server/pdf_extractor/: pdf_extractor.cpp
src/server/plugins/: EventManager.cpp  EventManager.hpp  PlugInManager.cpp  PlugInManager.hpp
src/server/reference_management/: IReferenceManager.h
src/server/server/: server.cc  server.hpp  server_config.cpp  server_config.hpp
src/server/test/: main.cc
src/server/tests/: TestURIFile.cpp
src/server/zotero/: zotero.cpp  zotero.hpp
src/shared/: gramma.h  metadata_handler.cc  metadata_handler.h  version.hpp  version.hpp.in
src/util/: StaticWebpageCreator.hpp  URLParser.cpp  debug.hpp  debug_file.hpp
src/zotero/: zotero.cpp  zotero.hpp
templates/: administration_template.html  information_template.html  metadata_template.html  pages_template.html  search_template.html  template_navbar.html  uploadBook_template.html
web/: .GetBooks.html.swo  Administration.html  GetBooks.css  GetBooks.html  GetBooks.js  ManageBooks.html  Search.css  Search.html  Search.js  Search.js~  ShowMetadata.html  ShowMetadata.js  UploadBook.html  Zotero.html  custom_error502.html  general.css  general.js  guest_index.html  index.html  main.html  search_template.html  sitescript.js  template_navbar.html  topnav.css  user.js
web/books/: metadata_template.html  pages_template.html
web/catalog/: catalogue.css  catalogue.js  template_navbar.html
web/catalogue/: catalogue.css  catalogue.js  catalogueAlt.css  search_template.html  template.html  template_navbar.html
web/information/: index.de.html  information_template.html
web/private/: UploadBook_old.html
web/static/: books.css  pages.css
web/statistics/: index.html  template.html
web/style/: metadata.css
(+417 files in other folders)
